--- a/Projects/run/README
+++ b/Projects/run/README
@@ -5,6 +5,7 @@ This is build for entertainment and fun.This is not a real virus!
 Built by Tiger
 
 HOW TO OPEN THE FILE:
+Move the file into /User/yourusername directory
 Go to terminal
 Type cd ./Downloads
 Type cd ./Tiger-s-studio-engine-main
