--- a/Projects/run/README
+++ b/Projects/run/README
@@ -1,6 +1,6 @@
 The file may contain lag or creepy!! YOU HAVE BEEN WARNED.
 
-This is build for entertainment and fun.This is not a real virus!
+This is built for entertainment and fun. This is not a real virus!
 
 Built by Tiger
 
@@ -10,12 +10,12 @@ Go to terminal
 Type cd ./Tiger-s-studio-engine-main
 Type cd ./Projects
 Type cd ./run
-Type Python totallynotvirus.py PythonLauncher
-
-OR
 
 Type Python3 totallynotvirus.py PythonLauncher
 
 If you have an extension for opening the file,ignore above.
 
 Thanks for downloading!
+
+(UPDATE FOR PEOPLE USING PYTHON 2): Please download Python 3 as this project does not work on Python 2.
+
