--- a/Projects/run/README
+++ b/Projects/run/README
@@ -1,4 +1,4 @@
-The file may contain lag or creepy!! YOU HAVE BEEN WARNED.
+The file may contain lag or creepy, and you may get stuck!!! YOU HAVE BEEN WARNED.
 
 This is built for entertainment and fun. This is not a real virus!
 
